Bug #13228  	open table cache not flushed when table schema changed  - Close open unused handlers when a schema error occurs.

sql/ha_ndbcluster.cc:
  When a schema error occurs call close_cached_tables to close any open unused handlers that has opened this table.
mysql-test/r/ndb_alter_table2.result:
  New BitKeeper file ``mysql-test/r/ndb_alter_table2.result''
mysql-test/t/ndb_alter_table2.test:
  New BitKeeper file ``mysql-test/t/ndb_alter_table2.test''